WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
168406
Weak should not use jsCast in its accessors
https://bugs.webkit.org/show_bug.cgi?id=168406
Summary
Weak should not use jsCast in its accessors
Keith Miller
Reported
2017-02-15 20:04:49 PST
Weak should not use jsCast in its accessors
Attachments
Patch
(2.25 KB, patch)
2017-02-15 20:17 PST
,
Keith Miller
fpizlo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Keith Miller
Comment 1
2017-02-15 20:17:54 PST
Created
attachment 301696
[details]
Patch
Keith Miller
Comment 2
2017-02-16 09:16:50 PST
rdar://problem/30171876
Keith Miller
Comment 3
2017-02-16 10:09:14 PST
Committed
r212442
: <
http://trac.webkit.org/changeset/212442
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug