Weak should not use jsCast in its accessors https://bugs.webkit.org/show_bug.cgi?id=168406

Reviewed by Filip Pizlo.

This can cause assertion failures in WebCore where classes might remove themselves
from a data structure in a weak reference, if that reference is still alive.

* heap/WeakInlines.h:
(JSC::>):
(JSC::Weak<T>::operator):
(JSC::Weak<T>::get):

Canonical link: https://commits.webkit.org/185458@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@212442 268f45cc-cd09-0410-ab3c-d52691b4dbfc